Added Users Endpoints,Permission and Token Tests
