# internal/services/identity_service/docs/swagger.yaml
@@ -20,6 +20,140 @@ definitions:
       refreshTokenExpireInSeconds:
         type: integer
     type: object
+  CreateOrEditUserDto:
+    properties:
+      email:
+        maxLength: 256
+        type: string
+      firstName:
+        maxLength: 64
+        minLength: 3
+        type: string
+      id:
+        type: integer
+      lastName:
+        maxLength: 64
+        minLength: 3
+        type: string
+      password:
+        type: string
+      roleIds:
+        items:
+          type: integer
+        type: array
+      userName:
+        maxLength: 256
+        minLength: 8
+        type: string
+    required:
+    - email
+    - firstName
+    - lastName
+    - userName
+    type: object
+  CreateUserDto:
+    properties:
+      email:
+        maxLength: 256
+        type: string
+      firstName:
+        maxLength: 64
+        minLength: 3
+        type: string
+      id:
+        type: integer
+      lastName:
+        maxLength: 64
+        minLength: 3
+        type: string
+      password:
+        type: string
+      roleIds:
+        items:
+          type: integer
+        type: array
+      userName:
+        maxLength: 256
+        minLength: 8
+        type: string
+    required:
+    - email
+    - firstName
+    - lastName
+    - userName
+    type: object
+  EditUserDto:
+    properties:
+      email:
+        maxLength: 256
+        type: string
+      firstName:
+        maxLength: 64
+        minLength: 3
+        type: string
+      id:
+        type: integer
+      lastName:
+        maxLength: 64
+        minLength: 3
+        type: string
+      password:
+        type: string
+      roleIds:
+        items:
+          type: integer
+        type: array
+      userName:
+        maxLength: 256
+        minLength: 8
+        type: string
+    required:
+    - email
+    - firstName
+    - lastName
+    - userName
+    type: object
+  GetUserByIdResult:
+    properties:
+      user:
+        $ref: '#/definitions/CreateOrEditUserDto'
+    type: object
+  GetUsersResult:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/UserDto'
+        type: array
+      totalCount:
+        type: integer
+    type: object
+  UpdateUserPermissionDto:
+    properties:
+      grantedPermissions:
+        items:
+          type: string
+        type: array
+    type: object
+  UserDto:
+    properties:
+      email:
+        type: string
+      firstName:
+        type: string
+      id:
+        type: integer
+      lastName:
+        type: string
+      userName:
+        type: string
+    type: object
+  UserPermissionsResult:
+    properties:
+      items:
+        items:
+          type: string
+        type: array
+    type: object
 info:
   contact: {}
 paths:
@@ -47,6 +181,195 @@ paths:
       summary: Authenticate
       tags:
       - Accounts
+  /api/v1/identites/user:
+    post:
+      consumes:
+      - application/json
+      description: Create new user
+      parameters:
+      - description: CreateUserDto
+        in: body
+        name: CreateUserDto
+        schema:
+          $ref: '#/definitions/CreateUserDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/UserDto'
+      security:
+      - ApiKeyAuth: []
+      summary: Create new user
+      tags:
+      - Users
+  /api/v1/identites/user/{userId}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user
+      parameters:
+      - description: User Id
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      security:
+      - ApiKeyAuth: []
+      summary: Delete user
+      tags:
+      - Users
+    get:
+      consumes:
+      - application/json
+      description: Get user by id
+      parameters:
+      - description: User Id
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/GetUserByIdResult'
+      security:
+      - ApiKeyAuth: []
+      summary: Get user by id
+      tags:
+      - Users
+  /api/v1/identites/user/{userId}/permissions:
+    get:
+      consumes:
+      - application/json
+      description: Get user permissions
+      parameters:
+      - description: User Id
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/UserPermissionsResult'
+      security:
+      - ApiKeyAuth: []
+      summary: Get user permissions
+      tags:
+      - Users
+  /api/v1/identites/users:
+    get:
+      consumes:
+      - application/json
+      description: Get all users
+      parameters:
+      - in: query
+        name: filters
+        type: string
+      - in: query
+        name: maxResultCount
+        type: integer
+      - in: query
+        name: skipCount
+        type: integer
+      - in: query
+        name: sorting
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/GetUsersResult'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all users
+      tags:
+      - Users
+  /api/v1/identities/user:
+    put:
+      consumes:
+      - application/json
+      description: Update user
+      parameters:
+      - description: EditUserDto
+        in: body
+        name: EditUserDto
+        schema:
+          $ref: '#/definitions/EditUserDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/UserDto'
+      security:
+      - ApiKeyAuth: []
+      summary: Update user
+      tags:
+      - Users
+  /api/v1/identities/user/{userId}/permissions:
+    put:
+      consumes:
+      - application/json
+      description: Update user permissions
+      parameters:
+      - description: User Id
+        in: path
+        name: userId
+        required: true
+        type: integer
+      - description: UpdateUserPermissionDto
+        in: body
+        name: UpdateUserPermissionDto
+        schema:
+          $ref: '#/definitions/UpdateUserPermissionDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      security:
+      - ApiKeyAuth: []
+      summary: Update user permissions
+      tags:
+      - Users
+  /api/v1/identities/user/{userId}/reset-permissions:
+    put:
+      consumes:
+      - application/json
+      description: Reset user permissions
+      parameters:
+      - description: User Id
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      security:
+      - ApiKeyAuth: []
+      summary: Reset user permissions
+      tags:
+      - Users
 securityDefinitions:
   ApiKeyAuth:
     in: header
