# internal/services/identity_service/users/features/creating_user/v1/endpoints/create_user_endpoint.go
@@ -1,0 +1,69 @@
+package endpoints
+
+import (
+	"net/http"
+
+	"github.com/go-playground/validator/v10"
+	"github.com/jinzhu/copier"
+	"github.com/labstack/echo/v4"
+	"github.com/tguankheng016/go-ecommerce-microservice/internal/pkg/http/echo/middlewares"
+	"github.com/tguankheng016/go-ecommerce-microservice/internal/pkg/permissions"
+	postgresGorm "github.com/tguankheng016/go-ecommerce-microservice/internal/pkg/postgres_gorm"
+	"github.com/tguankheng016/go-ecommerce-microservice/internal/services/identity_service/users/dtos"
+	"github.com/tguankheng016/go-ecommerce-microservice/internal/services/identity_service/users/models"
+	"github.com/tguankheng016/go-ecommerce-microservice/internal/services/identity_service/users/services"
+)
+
+func MapRoute(echo *echo.Echo, validator *validator.Validate) {
+	group := echo.Group("/api/v1/identites/user")
+	group.POST("", createUser(validator), middlewares.Authorize(permissions.PagesAdministrationUsersCreate))
+}
+
+// CreateUser
+// @Tags Users
+// @Summary Create new user
+// @Description Create new user
+// @Accept json
+// @Produce json
+// @Param CreateUserDto body CreateUserDto false "CreateUserDto"
+// @Success 200 {object} UserDto
+// @Security ApiKeyAuth
+// @Router /api/v1/identites/user [post]
+func createUser(validator *validator.Validate) echo.HandlerFunc {
+	return func(c echo.Context) error {
+		ctx := c.Request().Context()
+
+		tx, err := postgresGorm.GetTxFromContext(c)
+		if err != nil {
+			return echo.NewHTTPError(http.StatusInternalServerError, err)
+		}
+
+		userManager := services.NewUserManager(tx)
+
+		var createUserDto dtos.CreateUserDto
+
+		if err := c.Bind(&createUserDto); err != nil {
+			return c.JSON(http.StatusBadRequest, err)
+		}
+
+		if err := validator.StructCtx(ctx, createUserDto); err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, err)
+		}
+
+		var user models.User
+		if err := copier.Copy(&user, &createUserDto); err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, err)
+		}
+
+		if err := userManager.CreateUser(&user, createUserDto.Password); err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, err)
+		}
+
+		var userDto dtos.UserDto
+		if err := copier.Copy(&userDto, &user); err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, err)
+		}
+
+		return c.JSON(http.StatusOK, userDto)
+	}
+}
